book inactive whilst animating

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     Buddy likes humans when they give him fish.
   &lt;/div&gt;
   &lt;div class="page"&gt;
-    Buddy thinks humans are stupid because they give him fish.
+    Buddy likes chips with his fish.
   &lt;/div&gt;
 &lt;/div&gt;</pre>
 
@@ -246,6 +246,7 @@ var book = new Buddy({
       var Buddy = require('buddy');
       var book = new Buddy({
         selector:'#book',
+        touch_selector:'#book',
         page_selector:'.page'
       });
 
