--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
           <table width="100%"><tr><td align=center>
           <div id="book">
             <div class="page">
-              <hr />
-              <button>CLICK</button>
-              <input type="text" />
-              <!--<img src="assets/countryside.jpg" />-->
+              <img src="assets/countryside.jpg" />
             </div>
             <div class="page">
               <img src="assets/fireengine.jpg" />
